--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,9 @@
 numpy
 pandas
-appdirs==1.4.4
-Brotli==1.0.9
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.6
-dash==2.6.1
-dash-bootstrap-components==1.2.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-Flask==2.2.2
-Flask-Compress==1.13
+dash
+dash-bootstrap-components
+dash-core-components
+dash-html-components
+scipy
 gunicorn
-idna==3.4
-inflection==0.5.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-more-itertools==9.0.0
-multitasking==0.0.11
-plotly==5.11.0
-python-dateutil==2.8.2
-pytz==2022.6
-Quandl==3.7.0
-requests==2.28.1
-scipy==1.9.3
-six==1.16.0
-tenacity==8.1.0
-urllib3==1.26.12
-Werkzeug==2.2.2
+
